# BirmingHack

./: Cargo.toml
backend/: .env.example  Cargo.toml  diesel.toml
backend/migrations/2025-03-22-134422_create_users/: up.sql
backend/migrations/2025-03-22-135817_create_socials_books/: down.sql  up.sql
backend/migrations/2025-03-22-140958_create-booklistings/: down.sql  up.sql
backend/migrations/2025-03-22-213314_fix-book-schema/: down.sql  up.sql
backend/migrations/2025-03-22-221319_change-isbn-to-string/: down.sql  up.sql
backend/migrations/2025-03-23-065345_fix-book-schema/: down.sql  up.sql
backend/src/: embeddings.rs  main.rs  ocr.rs  schema.rs
backend/src/database_structs/: Users.rs  mod.rs
backend/src/routes/: listing_routes.rs  mod.rs  user_routes.rs
docs/: api.md  tables.md
frontend/: Cargo.toml  globals.css  index.html
frontend/src/: main.rs
frontend/src/routes/: index.rs  listing.rs  login.rs  mod.rs  not_found.rs  signup.rs
groupings/: Cargo.toml
groupings/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs
