[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
bcrypt = "0.17.0"
rocket = { version = "0.5.1", features = ["json", "secrets", "uuid"] }
rocket_db_pools = { version = "0.2.0", features = ["diesel_postgres"] }
shared = { version = "0.1.0", path = "../shared" }
diesel = { version = "2", default-features = false, features = ["uuid"]}
uuid = "1.16.0"
rust-bert = "0.23.0"
jsonwebtoken = "9.3.1"
dotenv = "0.15.0"
base64 = "0.22.1"
reqwest = { version = "0.12.15", features = ["multipart", "json"] }
serde = "1.0.219"
