[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
icondata = "0.5.0"
leptos = { version = "0.7.8", features = ["csr"] }
leptos_icons = "0.5.0"
leptos_router = "0.7.8"
leptos_router_macro = "0.7.8"
web-sys = { version = "0.3", features = ["FileList", "File"] }
wasm-bindgen-futures = "0.4"
shared = { version = "0.1.0", path = "../shared" }
reqwest = { version = "0.12.15", features = ["multipart", "json"] }
wasm-bindgen = "0.2.100"
base64 = "0.22.1"
serde_json = "1.0.140"

[package.metadata.leptos]
tailwind-version = "4.0.0"
tailwind-input-file = "globals.css"
